added new skill

--- a/assets/css/micheal.css
+++ b/assets/css/micheal.css
@@ -646,6 +646,10 @@ section {
     width: 90%;
 }
 
+.skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span {
+    width: 100%;
+}
+
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span {
     width: 100%;
@@ -664,6 +668,10 @@ section {
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(5) .bar span {
+    width: 100%;
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(6) .bar span {
     width: 100%;
 }
 
