--- a/assets/css/micheal.css
+++ b/assets/css/micheal.css
@@ -111,13 +111,19 @@ section {
     align-items: center;
     flex-direction: row;
     flex-wrap: nowrap;
-    padding: 0 9%;
-    justify-content: space-between;
+    padding: 8% 9% 0 8%;
+    /* justify-content: space-between; */
+    /* margin-top: 3rem; */
+    gap: 5rem;
 }
 
-.home-content {
+/* .home-content {
     max-width: 60rem;
-}
+} */
+
+/* .home-content {
+    flex: 1;
+} */
 
 .home-content h1 {
     position: relative;
@@ -173,18 +179,27 @@ section {
 .btn-box {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    gap: 2rem;
+    /* justify-content: space-between;
     width: 34.5rem;
-    height: 5rem;
+    height: 5rem; */
+    /* width: 100%; */
+    /* max-width: 70rem; */
+    width: 37rem;
 }
 
 .btn-box .btn {
    position: relative;
+   width: 100%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
-   width: 15rem;
-   height: 100%;
+   /* width: 15rem; */
+   /* width: fit-content; */
+   padding: 1rem 1rem;
+    /* padding-left: 1rem;
+    padding-right: 1rem; */
+   /* height: 100%; */
    background: var(--main-color);
    border: .2rem solid var(--main-color);
    border-radius: .8rem; 
@@ -235,7 +250,7 @@ section {
     width: 170px;
     bottom: 4rem;
     justify-content: space-between;
-    margin-top: 6rem;
+    margin-top: 4rem;
 }
 
 .home-sci a {
@@ -275,37 +290,32 @@ section {
     width: 100%;
 }
 
-.home-imgHover {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 45%;
-    height: 100%;
-    background: transparent;
-    transition: 3s;
-}
-
-.home-imgHover:hover {
-    background: var(--bg-color);
-    opacity: .8;
-}
-
 .image_box {
     position: relative;
 }
 
-.image_box img {
-    width: 40rem;
-    height: 40rem;
-    object-fit: cover;
+.image_box .box {
+    overflow: hidden;
     border-radius: 50%;
     border: .2rem solid var(--main-color);
+    height: 100%;
+}
+
+.image_box .box_wrapper {
+    width: 40rem;
+    height: 40rem;
+    position: relative;
+}
+
+.image_box .box img {
+    object-fit: cover;
+    width: 100%;  
 }
 
 .image_box .circle-spin {
     position: absolute;
-    top: 49%;
-    left: 50%; 
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%) rotate(0);
     width: 100%;
     height: 100%;
@@ -412,6 +422,18 @@ section {
     width: 100%;
 }
  
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+/* Visible state when scrolled into view */
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 
 
@@ -1015,8 +1037,9 @@ section:nth-child(odd) .animate.scroll,
         gap: 4rem;
     }
 
-    .home-imgHover {
-      display: none;
+    .image_box .box_wrapper {
+        width: 30rem;
+        height: 30rem;
     }
 
     .project {
@@ -1048,7 +1071,6 @@ section:nth-child(odd) .animate.scroll,
     }
 
     .home-content {
-        /* max-width: 60rem; */
         max-width: 100%;
     }
 
@@ -1073,6 +1095,18 @@ section:nth-child(odd) .animate.scroll,
 @media (max-width: 462px) {
     .home-content h1 {
         font-size: 5.2rem;
+    }
+
+    .btn-box {
+        position: relative;
+        display: flex;
+        gap: 2rem;
+        /* justify-content: space-between;
+        width: 34.5rem;
+        height: 5rem; */
+        /* width: 100%; */
+        /* max-width: 70rem; */
+        width: 35rem;
     }
 
     .education {
@@ -1101,11 +1135,6 @@ section:nth-child(odd) .animate.scroll,
     .home-content h1 {
         font-size: 4rem;
     }
-
-    .image_box img {
-        width: 30rem;
-        height: 30rem;
-    } 
     
 }
 
